fixed overlap of breakpoints

--- a/src/sass/frontend.scss
+++ b/src/sass/frontend.scss
@@ -124,7 +124,7 @@ div.wpforms-container {
 	position: relative;
 }
 .temp-beg-container {
-	@media screen and (max-width: 782px) {
+	@media screen and (max-width: 781.5px) {
 		& > .wp-block-columns {
 			& > :first-child {
 				position: relative;
